vignette fix & gap adjustments (theres gonna be alot of this)

--- a/static/CSS/CardPage.css
+++ b/static/CSS/CardPage.css
@@ -297,7 +297,7 @@ body .loading {
     border-radius: 10px;
     padding: 10px;
     width: 100%;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -307,7 +307,7 @@ body .loading {
     border-radius: 10px;
     padding: 10px;
     width: 100%;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 
